--- a/docs/05.ldap.md
+++ b/docs/05.ldap.md
@@ -25,10 +25,24 @@ ldapsearch -x -w password -D "cn=Denzel Washington,ou=people,dc=example,dc=com" 
 ldapwhoami -x -w password -H ldap://ldap.example.com -D "cn=Denzel Washington,ou=people,dc=example,dc=com" -Z
 ```
 
+## Add group
+
+### admins
+
+```bash
+ldapadd -x -w password -D "cn=manager,ou=admins,dc=example,dc=com" -Z -f /share/group.ldif
+```
+
 ### Verify
 
 ```bash
 ldapsearch -x -w password -D "cn=manager,ou=admins,dc=example,dc=com" -b "dc=example,dc=com" objectClass=* -Z
+```
+
+### Delete data
+
+```bash
+ldapdelete -x -w password -D "cn=manager,ou=admins,dc=example,dc=com" "cn=Denzel Washington,ou=people,dc=example,dc=com" -Z
 ```
 
 ## Truststore
